src/css/components/_scroll-up.scss
// Scroll

.scroll-top-wrapper {
  position: fixed;
  opacity: 0;
  visibility: hidden;
  overflow: hidden;
  text-align: center;
  z-index: 99999999;
  background-color: #777777;
  color: #eeeeee;
  width: 50px;
  height: 48px;
  line-height: 48px;
  right: 30px;
  bottom: 30px;
  padding-top: 2px;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
  border-bottom-right-radius: 10px;
  border-bottom-left-radius: 10px;
  -webkit-transition: all 0.5s ease-in-out;
  -moz-transition: all 0.5s ease-in-out;
  -ms-transition: all 0.5s ease-in-out;
  -o-transition: all 0.5s ease-in-out;
  transition: all 0.5s ease-in-out;
}
.scroll-top-wrapper:hover {
  background-color: #888888;
}
.scroll-top-wrapper.show {
  visibility:visible;
  cursor:pointer;
  opacity: 1.0;
}
.scroll-top-wrapper i.fa {
  line-height: inherit;
}

